fix: code block spacing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -104,6 +104,7 @@ pre {
     code {
         border: none;
         background: transparent;
+        padding: 0;
 
         &::after {
             content: attr(data-lang);
